--- a/wordgap-client/res/layout/main_menu.xml
+++ b/wordgap-client/res/layout/main_menu.xml
@@ -3,8 +3,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:background="@color/mistygreen"
-
+                android:background="@color/hellblau"
         >
 
     <LinearLayout
@@ -33,7 +32,7 @@
                    </ImageView>
              </LinearLayout>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout 
 
                   android:layout_width="fill_parent"
 
@@ -94,12 +93,6 @@
                    android:layout_margin="20dp"
                    android:onClick="imageClick"/>
 
-
     </LinearLayout>
-
-
-
-
-
 </RelativeLayout>
 
