new color and string res

--- a/wordgap-client/res/values/colors.xml
+++ b/wordgap-client/res/values/colors.xml
@@ -11,4 +11,8 @@
     <color name="apple">#BD2B41</color>
     <color name="avocado">#314142</color>
     <color name="darkseagreen">#E0FFFF</color>
+    <color name="teal">#2d8982</color>
+    <color name="hellblau">#7cbcb7</color>
+    <color name="nicegreen">#BEF783</color>
+    
 </resources>
